slurm_job_outputs/verify_kiss_53005096.err

CondaSystemExit: Exiting.

  File "verify_kiss.py", line 61
    if i == pcd_list - 1
                       ^
SyntaxError: invalid syntax
